--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "6.4",
-    "sass": "^1.85.1"
+    "sass": "^1.85.1",
+    "tech-stack-icons": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
