--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "firebase": "^11.4.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
