--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "route": "https://portfolio-backend-juzba-h7dtdva0fvadach3.westeurope-01.azurewebsites.net/api/Online",
+      "route": "https://portfolio-backend-juzba-h7dtdva0fvadach3.westeurope-01.azurewebsites.net",
       "methods": [
         "get"
       ]
