--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "6.4",
+    "react-router-dom": "^7.5.0",
     "sass": "^1.85.1",
     "tech-stack-icons": "^2.1.0"
   },
