--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,10 +1,13 @@
 {
   "routes": [
     {
-      "route": "/projects",
+      "route": "/*",
       "methods": [
         "get"
-      ]
+      ],
+      "rewrite": "/index.html",
+      "redirect": "/index.html",
+      "statusCode": 200
     }
   ]
 }
