--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,9 +1,19 @@
-{
-  "routes": [
-    {
-      "route": "/*",
-      "redirect": "/index.html",
-      "statusCode": 200
-    }
-  ]
-}
+{  
+  "routes": [  
+    {  
+      "route": "/",  
+      "serve": "/index.html",  
+      "statusCode": 200  
+    },  
+    {  
+      "route": "/projects",  
+      "serve": "/projects.html",  
+      "statusCode": 200  
+    },  
+    {  
+      "route": "/*",  
+      "serve": "/index.html",  
+      "statusCode": 200  
+    }  
+  ]  
+}  
